Bug 2501 - copy/delete files from win98 explorer doesn't work
Summary: copy/delete files from win98 explorer doesn't work
Status: CLOSED FIXED
Alias: None
Product: Samba 3.0
Classification: Unclassified
Component: File Services (show other bugs)
Version: 3.0.12
Hardware: x86 Windows 98
: P1 major
Target Milestone: none
Assignee: Jeremy Allison
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-03-21 03:38 UTC by Stefan Burkei
Modified: 2005-03-22 00:16 UTC (History)
2 users (show)

See Also:


Attachments
gzipped ethereal trace of deleting a doc file from a Samba 3.0.12 file share (201.86 KB, application/octet-stream)
2005-03-21 07:59 UTC, Gerald (Jerry) Carter (dead mail address)
no flags Details
deleting file from 2k file share (Windows 98 se client) (1.48 KB, application/octet-stream)
2005-03-21 07:59 UTC, Gerald (Jerry) Carter (dead mail address)
no flags Details
Proposed patch. (608 bytes, patch)
2005-03-21 11:06 UTC, Jeremy Allison
no flags Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Burkei 2005-03-21 03:38:35 UTC
Using the explorer on my win98-client, I cannot copy/delete files from a
samba-3.0.12-share. The "Prepare for copying/deleting..."-window appears but the
progress bar doesn't increment. The authenticated user has full access to the
share/directory though the machine isn't a Domain-Member. I use user-password
security only for this Test-Machine. Copying/Deleting within a DOS-Box on the
same machine works fine.
Switching back to samba-3.0.11 solves the problem.

Here is my smb.conf:
[global]
	workgroup = DOMAIN
	server string = DOMAIN-Server
	interfaces = eth0
	security = user
	encrypt passwords = Yes
	paranoid server security = No
	passdb backend = tdbsam, guest
	idmap gid = 39000-40000
	idmap uid = 39000-40000
	username map = /etc/samba/users.map
	socket options = SO_KEEPALIVE IPTOS_LOWDELAY TCP_NODELAY SO_SNDBUF=8192
SO_RCVBUF=8192
	printing = bsd
	load printers = Yes
	printcap name = /etc/printcap
        printer admin = root
	logon script = logon.bat
	logon path = \\%L\profile\%U
	logon drive = C:
	logon home = \\%L\%U\profile
	domain logons = Yes
	os level = 64
	preferred master = Yes
	local master = Yes
	domain master = Yes
	wins support = Yes
        add user script = /usr/sbin/useradd -m "%u"
        add group script = /usr/sbin/creategroup "%g"
        add user to group script = /usr/bin/gpasswd -a "%u" "%g"
        delete user from group script = /usr/bin/gpasswd -d "%u" "%g"
        set primary group script = /usr/sbin/usermod -g "%g" "%u"
        add machine script = /usr/sbin/useradd -s /bin/false -d /dev/null "%u"
        delete user script = /usr/sbin/userdel "%u"
        delete group script = /usr/sbin/groupdel "%g"
	winbind separator = +

[homes]
	comment = USER-Directory for %U
	force user = %U
	read only = No
	create mask = 0750
	directory mask = 0750
	browseable = No
	force group = +users
Comment 1 Gerald (Jerry) Carter (dead mail address) 2005-03-21 06:40:57 UTC
Jeremy, I see the trans2FindNext calls from the win98 client stuck in a 
loop with the end of search and continue bits set.  Doesn't sounds right 
to me.
Comment 2 Gerald (Jerry) Carter (dead mail address) 2005-03-21 07:53:02 UTC
jeremy, I'm handing this one off to you.  I'm attaching 2 traces
so you can see the problem.
Comment 3 Gerald (Jerry) Carter (dead mail address) 2005-03-21 07:59:26 UTC
Created attachment 1054 [details]
gzipped ethereal trace of deleting a doc file from a Samba 3.0.12 file share
Comment 4 Gerald (Jerry) Carter (dead mail address) 2005-03-21 07:59:55 UTC
Created attachment 1055 [details]
deleting file from 2k file share (Windows 98 se client)
Comment 5 Mark Condic 2005-03-21 09:10:36 UTC
Just a note, I had this problem in 3.0.10, and 3.0.11 too.
You can not rename the file either.  Same problem as described above.
Comment 6 Jeremy Allison 2005-03-21 11:06:29 UTC
Created attachment 1056 [details]
Proposed patch.

Ok, here is the correct patch I think. More testing very welcome !
Jeremy.
Comment 7 Lars Müller 2005-03-21 11:52:15 UTC
Pre build packages for SuSE are on the way to Samba.org and the SuSE ftp server.

ftp://ftp.SuSE.com/pub/projects/samba/3.0/ or
http://ftp.SuSE.com/pub/projects/samba/3.0/
Comment 8 Gerald (Jerry) Carter (dead mail address) 2005-03-21 12:05:01 UTC
Fix works in all my test cases.  

Stefan, please reopen if you find otherwise on your servers.
Thanks for reporting this.
Comment 9 Mark Condic 2005-03-21 19:01:16 UTC
*** Bug 2470 has been marked as a duplicate of this bug. ***
Comment 10 Lars Müller 2005-03-21 19:13:03 UTC
Fix works also for Copied and removed single files and diretories.
Comment 11 Mark Condic 2005-03-21 19:17:06 UTC
I tested the latest build from SuSE, 3.0.12-2.1, and now in Windows98 using 
Windows Explorer, I can delete and rename files.  However, in MS-DOS, FreeDOS, 
and Ultimate Boot CD, there are still phatom directiores with files in them.  I 
don't see them in Windows98 Explorer, or windows XP.  How do I re-open this 
bug? or do I need to open a new bugzilla?  Can some one else try this from 
FreeDOS or MS-DOS or Erwins Network boot disk from Ultimate Boot CD?  Thanks.
Comment 12 Jeremy Allison 2005-03-21 19:24:56 UTC
More details please. What phantom directories ? What do they look like.
Exactly how is this reproduced ?
Jeremy.
Comment 13 Stefan Burkei 2005-03-22 00:16:57 UTC
hi jerry,

i applied the patch, build new package and... the bug is gone.
I'll stay now with 3.0.12 for the next one ;-)