Fix a bug that breaks copy/delete of files from Win98 Explorer.

Bugzilla:	https://bugzilla.samba.org/show_bug.cgi?id=2501
Approved by:	portmgr (krion)